Fix full height images height on mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -292,6 +292,10 @@ ol, #page-content ul {
     .image-grid img {
         height: 300px;
     }
+
+    .image-grid-full-height img {
+        height: auto;
+    }
 }
 
 @media (max-width: 750px) {
